--- a/pages/Hiragana.html
+++ b/pages/Hiragana.html
@@ -14,10 +14,16 @@
     #feedback {
       margin-top: 15px;
       font-size: 20px;
+      transition: opacity 0.5s ease-in-out;
     }
     #prompt {
       font-size: 50px;
       margin-bottom: 20px;
+    }
+    #progressBox {
+      margin-top: 30px;
+      font-size: 18px;
+      color: #aaa;
     }
   </style>
 </head>
@@ -25,7 +31,7 @@
   <h1 id="pageTitle">Caricamento...</h1>
 
   <div id="hintToggle" style="margin-bottom: 20px; display: none;">
-    <label><input type="checkbox" id="hintCheckbox" checked> Mostra hint (lettura e significato)</label>
+    <label><input type="checkbox" id="hintCheckbox" checked> Mostra hint (es. lettura o significato)</label>
   </div>
 
   <div id="content">📡 Caricamento dati in corso...</div>
@@ -35,9 +41,13 @@
     <input type="text" id="userInput" placeholder="Scrivi qui...">
     <button onclick="checkAnswer()">Verifica</button>
     <p id="feedback"></p>
+    <div id="progressBox"></div>
   </div>
 
   <p id="error" style="color: red; margin-top: 20px;"></p>
+
+  <audio id="correctSound" src="../sound/correct.mp3" preload="auto"></audio>
+  <audio id="wrongSound" src="../sound/wrong.mp3" preload="auto"></audio>
 
   <script>
     const fileName = location.pathname.split('/').pop().split('.html')[0];
@@ -57,11 +67,11 @@
     let repeatCount = 0;
     let blindCount = 0;
 
+    const correctSound = document.getElementById("correctSound");
+    const wrongSound = document.getElementById("wrongSound");
+
     fetch(sheetUrl)
-      .then(res => {
-        if (!res.ok) throw new Error("Foglio non trovato o non pubblico.");
-        return res.json();
-      })
+      .then(res => res.ok ? res.json() : Promise.reject("Foglio non trovato o non pubblico."))
       .then(data => {
         vocab = data.map(row => ({
           kanji: row.Kanji || row.Kana || "",
@@ -74,7 +84,7 @@
       })
       .catch(err => {
         console.error(err);
-        document.getElementById("error").innerText = `❌ Errore: ${err.message}`;
+        document.getElementById("error").innerText = `❌ Errore: ${err}`;
         setTimeout(() => window.location.href = "../index.html", 3000);
       });
 
@@ -88,30 +98,19 @@
         exerciseArea.style.display = "none";
         const table = document.createElement("table");
         table.innerHTML = `
-          <thead>
-            <tr>
-              <th>Kanji / Kana</th>
-              <th>Hiragana</th>
-              <th>Romaji</th>
-              <th>Significato</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${vocab.map(r => `
-              <tr>
-                <td>${r.kanji}</td>
-                <td>${r.hiragana || "-"}</td>
-                <td>${r.romaji || "-"}</td>
-                <td>${r.meaning || "-"}</td>
-              </tr>
-            `).join("")}
-          </tbody>`;
+          <thead><tr>
+            <th>Kanji / Kana</th><th>Hiragana</th><th>Romaji</th><th>Significato</th>
+          </tr></thead>
+          <tbody>${vocab.map(r => `
+            <tr><td>${r.kanji}</td><td>${r.hiragana}</td><td>${r.romaji}</td><td>${r.meaning}</td></tr>
+          `).join("")}</tbody>`;
         content.innerHTML = "";
         content.appendChild(table);
       } else {
-        hintToggle.style.display = "block";
+        hintToggle.style.display = type === "Esercitazione" ? "block" : "none";
         content.innerHTML = "";
         exerciseArea.style.display = "block";
+        mostraProgresso();
         nextWord();
       }
     }
@@ -121,65 +120,84 @@
       stage = "normal";
       repeatCount = 0;
       blindCount = 0;
-
-      const prompt = document.getElementById("prompt");
-      const feedback = document.getElementById("feedback");
-      const input = document.getElementById("userInput");
-
-      prompt.innerHTML = current.kanji;
-      feedback.innerText = "";
-      input.value = "";
-      input.focus();
+      document.getElementById("prompt").innerHTML = current.kanji;
+      document.getElementById("feedback").innerText = "";
+      document.getElementById("userInput").value = "";
+      document.getElementById("userInput").focus();
     }
 
     function checkAnswer() {
       const inputField = document.getElementById("userInput");
       const input = inputField.value.trim().toLowerCase();
-      const feedback = document.getElementById("feedback");
-      const showHints = document.getElementById("hintCheckbox").checked;
-
       const expected = isKanaModule ? current.romaji.toLowerCase() : current.hiragana;
+      const isExercise = type === "Esercitazione";
+      const isQuiz = type === "Quiz";
+      const showHints = document.getElementById("hintCheckbox").checked;
+      const feedback = document.getElementById("feedback");
 
-      // Sempre cancella input
+      const solution = isKanaModule ? current.romaji : `${current.hiragana} – ${current.meaning}`;
       inputField.value = "";
       inputField.focus();
 
-      const solution = isKanaModule
-        ? `${current.romaji} – ${current.meaning}`
-        : `${current.hiragana} – ${current.meaning}`;
+      const parolaChiave = current.kanji || current.kana;
 
       if (stage === "normal") {
         if (input === expected) {
-          feedback.innerHTML = `✅ Corretto!<br><em>${solution}</em>`;
+          feedback.innerHTML = `✅ Corretto!${isExercise ? `<br><em>${solution}</em>` : ""}`;
+          feedback.classList.add("fade");
+          correctSound.play();
+          aggiornaProgresso(moduleName, parolaChiave, 1);
           setTimeout(nextWord, 1000);
         } else {
-          feedback.innerHTML = `❌ Sbagliato!<br><em>${solution}</em>`;
+          feedback.innerHTML = `❌ Sbagliato!${(isExercise && showHints) || isQuiz ? `<br><em>${solution}</em>` : ""}`;
+          feedback.classList.add("fade");
+          wrongSound.play();
           stage = "correction";
         }
       } else if (stage === "correction") {
         if (input === expected) {
           repeatCount++;
-          feedback.innerHTML = `✍️ Ripeti ${3 - repeatCount}x con hint<br><em>${solution}</em>`;
-          if (repeatCount >= 3) {
-            stage = "blind";
-          }
+          const hint = ((isExercise && showHints) || (isQuiz && repeatCount < 3)) ? `<br><em>${solution}</em>` : "";
+          feedback.innerHTML = `✍️ Ripeti ${3 - repeatCount}x${hint}`;
+          if (repeatCount >= 3) stage = "blind";
         } else {
           repeatCount = 0;
-          feedback.innerHTML = `❌ Ancora sbagliato. Ricominciamo.<br><em>${solution}</em>`;
+          feedback.innerHTML = `❌ Ancora sbagliato. Ricominciamo.${(isExercise && showHints) || (isQuiz && repeatCount < 3) ? `<br><em>${solution}</em>` : ""}`;
+          wrongSound.play();
         }
       } else if (stage === "blind") {
         if (input === expected) {
           blindCount++;
           feedback.innerHTML = `🔁 Corretta ${blindCount}/2 volte`;
           if (blindCount >= 2) {
+            aggiornaProgresso(moduleName, parolaChiave, 1);
             setTimeout(nextWord, 1000);
           }
         } else {
           stage = "correction";
           repeatCount = 0;
-          feedback.innerHTML = `❌ Torniamo agli aiuti.<br><em>${solution}</em>`;
+          feedback.innerHTML = `❌ Torniamo agli aiuti.`;
         }
       }
+    }
+
+    function aggiornaProgresso(modulo, parola, punteggio) {
+      const salvataggio = JSON.parse(localStorage.getItem("progresso")) || {};
+      if (!salvataggio[modulo]) salvataggio[modulo] = {};
+      salvataggio[modulo][parola] = punteggio;
+
+      const entries = Object.entries(salvataggio[modulo]).filter(([k]) => k !== "score");
+      const media = entries.length ? (entries.map(e => e[1]).reduce((a, b) => a + b, 0) / entries.length) : 0;
+      salvataggio[modulo].score = Math.round(media * 10 * 100) / 100;
+
+      localStorage.setItem("progresso", JSON.stringify(salvataggio));
+      mostraProgresso();
+    }
+
+    function mostraProgresso() {
+      const progresso = JSON.parse(localStorage.getItem("progresso")) || {};
+      const score = progresso[moduleName]?.score || 0;
+      document.getElementById("progressBox").innerText = `📈 Progresso: ${score} / 10`;
     }
 
     document.getElementById("userInput").addEventListener("keyup", function (e) {
